--- a/IonEngine_Test/IonEngine_Test.vcxproj
+++ b/IonEngine_Test/IonEngine_Test.vcxproj
@@ -102,6 +102,16 @@
       <AdditionalDependencies>glfw3.lib;LinearMath_Debug.lib;BulletCollision_Debug.lib;BulletDynamics_Debug.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>../IonEngine/win64;../IonEngine/ext/bullet3/lib/</AdditionalLibraryDirectories>
     </Link>
+    <PostBuildEvent>
+      <Command>robocopy /E /PURGE /NFL /NDL /NJH /NJS "$(ProjectDir)res" "$(OutDir)res"
+if errorlevel 0 goto Success
+if errorlevel 1 goto Success
+echo "Resource Copy Failed!"
+exit 1
+:Success
+exit 0</Command>
+      <Message>Copy Resources to Build directory</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -116,6 +126,16 @@
       <AdditionalDependencies>glfw3.lib;LinearMath_Debug.lib;BulletCollision_Debug.lib;BulletDynamics_Debug.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>../IonEngine/win32;../IonEngine/ext/bullet3/lib/</AdditionalLibraryDirectories>
     </Link>
+    <PostBuildEvent>
+      <Command>robocopy /E /PURGE /NFL /NDL /NJH /NJS "$(ProjectDir)res" "$(OutDir)res"
+if errorlevel 0 goto Success
+if errorlevel 1 goto Success
+echo "Resource Copy Failed!"
+exit 1
+:Success
+exit 0</Command>
+      <Message>Copy Resources to Build directory</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -134,6 +154,16 @@
       <AdditionalDependencies>glfw3.lib;LinearMath.lib;BulletCollision.lib;BulletDynamics.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>../IonEngine/win32;../IonEngine/ext/bullet3/lib/</AdditionalLibraryDirectories>
     </Link>
+    <PostBuildEvent>
+      <Command>robocopy /E /PURGE /NFL /NDL /NJH /NJS "$(ProjectDir)res" "$(OutDir)res"
+if errorlevel 0 goto Success
+if errorlevel 1 goto Success
+echo "Resource Copy Failed!"
+exit 1
+:Success
+exit 0</Command>
+      <Message>Copy Resources to Build directory</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -152,6 +182,16 @@
       <AdditionalDependencies>glfw3.lib;LinearMath.lib;BulletCollision.lib;BulletDynamics.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>../IonEngine/win64;../IonEngine/ext/bullet3/lib/</AdditionalLibraryDirectories>
     </Link>
+    <PostBuildEvent>
+      <Command>robocopy /E /PURGE /NFL /NDL /NJH /NJS "$(ProjectDir)res" "$(OutDir)res"
+if errorlevel 0 goto Success
+if errorlevel 1 goto Success
+echo "Resource Copy Failed!"
+exit 1
+:Success
+exit 0</Command>
+      <Message>Copy Resources to Build directory</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ProjectReference Include="..\IonEngine\IonEngine.vcxproj">
@@ -166,20 +206,12 @@
     <ClCompile Include="TestScene.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="res\shaders\test\fs.glsl">
+    <None Include="res\shaders\test\fs.glsl">
       <FileType>Document</FileType>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(OutDir)\res\shaders\test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(OutDir)\res\shaders\test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(OutDir)\res\shaders\test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(OutDir)\res\shaders\test\</DestinationFolders>
-    </CopyFileToFolders>
-    <CopyFileToFolders Include="res\shaders\test\vs.glsl">
+    </None>
+    <None Include="res\shaders\test\vs.glsl">
       <FileType>Document</FileType>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(OutDir)\res\shaders\test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(OutDir)\res\shaders\test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(OutDir)\res\shaders\test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(OutDir)\res\shaders\test\</DestinationFolders>
-    </CopyFileToFolders>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TestGame.h" />
@@ -187,54 +219,30 @@
     <ClInclude Include="TestScene.h" />
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="res\shaders\postprocess_test\fs.glsl">
+    <None Include="res\shaders\postprocess_test\fs.glsl">
       <FileType>Document</FileType>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(OutDir)\res\shaders\postprocess_test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(OutDir)\res\shaders\postprocess_test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(OutDir)\res\shaders\postprocess_test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(OutDir)\res\shaders\postprocess_test\</DestinationFolders>
-    </CopyFileToFolders>
-    <CopyFileToFolders Include="res\shaders\postprocess_test\vs.glsl">
+    </None>
+    <None Include="res\shaders\postprocess_test\vs.glsl">
       <FileType>Document</FileType>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(OutDir)\res\shaders\postprocess_test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(OutDir)\res\shaders\postprocess_test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(OutDir)\res\shaders\postprocess_test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(OutDir)\res\shaders\postprocess_test\</DestinationFolders>
-    </CopyFileToFolders>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="res\shaders\particle_basic\fs.glsl">
+    <None Include="res\shaders\particle_basic\fs.glsl">
       <FileType>Document</FileType>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(OutDir)\res\shaders\particle_basic\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(OutDir)\res\shaders\particle_basic\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(OutDir)\res\shaders\particle_basic\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(OutDir)\res\shaders\particle_basic\</DestinationFolders>
-    </CopyFileToFolders>
-    <CopyFileToFolders Include="res\shaders\particle_basic\vs.glsl">
+    </None>
+    <None Include="res\shaders\particle_basic\vs.glsl">
       <FileType>Document</FileType>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(OutDir)\res\shaders\particle_basic\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(OutDir)\res\shaders\particle_basic\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(OutDir)\res\shaders\particle_basic\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(OutDir)\res\shaders\particle_basic\</DestinationFolders>
-    </CopyFileToFolders>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="res\shaders\particle_basic\gs.glsl">
+    <None Include="res\shaders\particle_basic\gs.glsl">
       <FileType>Document</FileType>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(OutDir)\res\shaders\particle_basic\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(OutDir)\res\shaders\particle_basic\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(OutDir)\res\shaders\particle_basic\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(OutDir)\res\shaders\particle_basic\</DestinationFolders>
-    </CopyFileToFolders>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="res\shaders\test\gs.glsl">
+    <None Include="res\shaders\test\gs.glsl">
       <FileType>Document</FileType>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(OutDir)\res\shaders\test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(OutDir)\res\shaders\test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(OutDir)\res\shaders\test\</DestinationFolders>
-      <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(OutDir)\res\shaders\test\</DestinationFolders>
-    </CopyFileToFolders>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
