--- a/IonEngine_Test/IonEngine_Test.vcxproj
+++ b/IonEngine_Test/IonEngine_Test.vcxproj
@@ -153,6 +153,7 @@ exit 0</Command>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>glfw3.lib;LinearMath.lib;BulletCollision.lib;BulletDynamics.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>../IonEngine/win32;../IonEngine/ext/bullet3/lib/</AdditionalLibraryDirectories>
+      <Profile>true</Profile>
     </Link>
     <PostBuildEvent>
       <Command>robocopy /E /PURGE /NFL /NDL /NJH /NJS "$(ProjectDir)res" "$(OutDir)res"
@@ -181,6 +182,7 @@ exit 0</Command>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>glfw3.lib;LinearMath.lib;BulletCollision.lib;BulletDynamics.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>../IonEngine/win64;../IonEngine/ext/bullet3/lib/</AdditionalLibraryDirectories>
+      <Profile>true</Profile>
     </Link>
     <PostBuildEvent>
       <Command>robocopy /E /PURGE /NFL /NDL /NJH /NJS "$(ProjectDir)res" "$(OutDir)res"
