--- a/IonEngine/IonEngine.vcxproj
+++ b/IonEngine/IonEngine.vcxproj
@@ -211,6 +211,7 @@
     <ClCompile Include="LightManager.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="MeshCollider.cpp" />
+    <ClCompile Include="MeshImporter.cpp" />
     <ClCompile Include="ParticleSystem.cpp" />
     <ClCompile Include="PhysicsDebugger.cpp" />
     <ClCompile Include="PhysicsWorld.cpp" />
@@ -271,6 +272,7 @@
     <ClInclude Include="LightManager.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="MeshCollider.h" />
+    <ClInclude Include="MeshImporter.h" />
     <ClInclude Include="ParticleSystem.h" />
     <ClInclude Include="Perlin.h" />
     <ClInclude Include="PhysicsDebugger.h" />
@@ -283,6 +285,7 @@
     <ClInclude Include="ShaderPreprocessor.h" />
     <ClInclude Include="SpecializedShaderProgram.h" />
     <ClInclude Include="SphereCollider.h" />
+    <ClInclude Include="StringUtils.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="UniformBuffer.h" />
     <ClInclude Include="VisualDebug.h" />
