--- a/IonEngine_Test/imgui.ini
+++ b/IonEngine_Test/imgui.ini
@@ -18,3 +18,43 @@ Pos=310,25
 Size=460,450
 Collapsed=0
 
+[Window][Camera]
+Pos=24,480
+Size=287,160
+Collapsed=0
+
+[Window][Cube]
+Pos=426,368
+Size=261,186
+Collapsed=0
+
+[Window][Sun]
+Pos=26,480
+Size=284,159
+Collapsed=0
+
+[Window][Materials]
+Pos=310,25
+Size=460,455
+Collapsed=0
+
+[Window][Particles]
+Pos=312,480
+Size=287,262
+Collapsed=0
+
+[Window][Rotating]
+Pos=24,480
+Size=287,276
+Collapsed=0
+
+[Window][EntityNoTransform]
+Pos=60,60
+Size=32,35
+Collapsed=0
+
+[Window][Console]
+Pos=1364,22
+Size=555,537
+Collapsed=0
+
