--- a/IonEngine_Test/IonEngine_Test.vcxproj
+++ b/IonEngine_Test/IonEngine_Test.vcxproj
@@ -102,6 +102,8 @@
     <Link>
       <AdditionalDependencies>glfw3.lib;LinearMath_Debug.lib;BulletCollision_Debug.lib;BulletDynamics_Debug.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>../IonEngine/win64;../IonEngine/ext/bullet3/lib/</AdditionalLibraryDirectories>
+      <SubSystem>Windows</SubSystem>
+      <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
     <PostBuildEvent>
       <Command>robocopy /E /PURGE /NFL /NDL /NJH /NJS "$(ProjectDir)res" "$(OutDir)res"
@@ -127,6 +129,8 @@ exit 0</Command>
     <Link>
       <AdditionalDependencies>glfw3.lib;LinearMath_Debug.lib;BulletCollision_Debug.lib;BulletDynamics_Debug.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>../IonEngine/win32;../IonEngine/ext/bullet3/lib/</AdditionalLibraryDirectories>
+      <SubSystem>Windows</SubSystem>
+      <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
     <PostBuildEvent>
       <Command>robocopy /E /PURGE /NFL /NDL /NJH /NJS "$(ProjectDir)res" "$(OutDir)res"
@@ -157,6 +161,8 @@ exit 0</Command>
       <AdditionalDependencies>glfw3.lib;LinearMath.lib;BulletCollision.lib;BulletDynamics.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>../IonEngine/win32;../IonEngine/ext/bullet3/lib/</AdditionalLibraryDirectories>
       <Profile>true</Profile>
+      <SubSystem>Windows</SubSystem>
+      <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
     <PostBuildEvent>
       <Command>robocopy /E /PURGE /NFL /NDL /NJH /NJS "$(ProjectDir)res" "$(OutDir)res"
@@ -187,6 +193,8 @@ exit 0</Command>
       <AdditionalDependencies>glfw3.lib;LinearMath.lib;BulletCollision.lib;BulletDynamics.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>../IonEngine/win64;../IonEngine/ext/bullet3/lib/</AdditionalLibraryDirectories>
       <Profile>true</Profile>
+      <SubSystem>Windows</SubSystem>
+      <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
     <PostBuildEvent>
       <Command>robocopy /E /PURGE /NFL /NDL /NJH /NJS "$(ProjectDir)res" "$(OutDir)res"
