Basic Frustum Culling and Math Intersections
Closes #28
- Camera now backed by Frustum3f struct
- Added many math structs intersections (some still unimplemented)
- Added min and max constant vectors for VecDi
- Added positive and negative infinity constant vectors for VecDf
- Added Plane projection method
- Added Frustum3f math struct
- Added mesh local bounds
- Added world bounds on Renderer component
- Added world bounds compute to MeshRenderer
- Added frustum culling stage in pipeline
- Added visibleRenderers argument to RenderPass render
- Moved Renderer register/unregister to enable/disable callbacks
- Added contains function to SimpleSet
- Added Stats window show bounds button
- Added VisualDebug drawWireDisk
- Added VisualDebug drawWirePlaneDisk
- Fixed VisualDebug.render writing to depth
- Fixed Transform.setWorldScale not update local scale cached value

--- a/IonEngine_Test/imgui.ini
+++ b/IonEngine_Test/imgui.ini
@@ -5,11 +5,11 @@ Collapsed=0
 
 [Window][Engine Stats]
 Pos=25,25
-Size=285,125
+Size=285,145
 Collapsed=0
 
 [Window][Scene]
-Pos=25,150
+Pos=25,170
 Size=285,330
 Collapsed=0
 
@@ -56,5 +56,20 @@ Collapsed=0
 [Window][Console]
 Pos=1364,22
 Size=555,537
+Collapsed=0
+
+[Window][Ray]
+Pos=24,480
+Size=304,150
+Collapsed=0
+
+[Window][Intersecter]
+Pos=60,60
+Size=168,54
+Collapsed=0
+
+[Window][Sphere]
+Pos=52,492
+Size=301,193
 Collapsed=0
 
