--- a/IonEngine_Test/imgui.ini
+++ b/IonEngine_Test/imgui.ini
@@ -24,13 +24,13 @@ Size=287,160
 Collapsed=0
 
 [Window][Cube]
-Pos=426,368
-Size=261,186
+Pos=26,500
+Size=285,198
 Collapsed=0
 
 [Window][Sun]
-Pos=26,480
-Size=284,159
+Pos=24,500
+Size=284,211
 Collapsed=0
 
 [Window][Materials]
@@ -39,18 +39,18 @@ Size=460,455
 Collapsed=0
 
 [Window][Particles]
-Pos=312,480
+Pos=312,482
 Size=287,262
 Collapsed=0
 
 [Window][Rotating]
-Pos=24,480
+Pos=646,586
 Size=287,276
 Collapsed=0
 
 [Window][EntityNoTransform]
-Pos=60,60
-Size=234,161
+Pos=24,500
+Size=288,163
 Collapsed=0
 
 [Window][Console]
@@ -71,5 +71,10 @@ Collapsed=0
 [Window][Sphere]
 Pos=52,492
 Size=301,193
+Collapsed=0
+
+[Window][Ground]
+Pos=60,60
+Size=266,100
 Collapsed=0
 
