Basic Deferred Opaque Rendering
Closes #36
- Added Framebuffer support for multiple draw buffers
- Improved Light class
- Implemented LightInspector gizmos and  more fields
- UniformBuffer supports array fields
- ShaderPreprocessor supports native type arrays
- Supports for no renderpass shaders
- RenderPass onShadersInitialized and prepareFrame callback
- RenderPassOpaque now uses deferred shading
- Added precise normal packing
- Added VisualDebug::drawWireCone

--- a/IonEngine/IonEngine.vcxproj.filters
+++ b/IonEngine/IonEngine.vcxproj.filters
@@ -289,7 +289,7 @@
       <Filter>Source Files\Engine\Editor\Components</Filter>
     </ClCompile>
     <ClCompile Include="LightInspector.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Engine\Editor\Components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -525,7 +525,7 @@
       <Filter>Header Files\Engine\Editor\Components</Filter>
     </ClInclude>
     <ClInclude Include="LightInspector.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Engine\Editor\Components</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
