--- a/IonEngine_Test/imgui.ini
+++ b/IonEngine_Test/imgui.ini
@@ -24,13 +24,13 @@ Size=287,160
 Collapsed=0
 
 [Window][Cube]
-Pos=26,500
-Size=285,198
+Pos=24,500
+Size=285,356
 Collapsed=0
 
 [Window][Sun]
-Pos=24,500
-Size=284,211
+Pos=320,652
+Size=284,329
 Collapsed=0
 
 [Window][Materials]
@@ -76,5 +76,10 @@ Collapsed=0
 [Window][Ground]
 Pos=60,60
 Size=266,100
+Collapsed=0
+
+[Window][GroundWall]
+Pos=800,52
+Size=266,174
 Collapsed=0
 
