Directional and Spot Shadows
Closes #43
- Framebuffer better depth only support
- Better std140 implementation
- Added ShadowCasters to manage a light's shadows
- Added ShadowAtlas to manage shadow atlas texture
- Added RenderPassShadows
- Reworked deferred material data for shadows
- Added orthogonalProjection to Matrix4x4f
- Added basic UniformBuffer get methods for arrays
- Fixed VisualDebug cross product checks

--- a/IonEngine/IonEngine.vcxproj
+++ b/IonEngine/IonEngine.vcxproj
@@ -233,6 +233,8 @@
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="ShaderMetaInfo.cpp" />
     <ClCompile Include="ShaderPreprocessor.cpp" />
+    <ClCompile Include="ShadowAtlas.cpp" />
+    <ClCompile Include="ShadowCaster.cpp" />
     <ClCompile Include="SpecializedShaderProgram.cpp" />
     <ClCompile Include="SphereCollider.cpp" />
     <ClCompile Include="StatsEditor.cpp" />
@@ -307,6 +309,8 @@
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="ShaderMetaInfo.h" />
     <ClInclude Include="ShaderPreprocessor.h" />
+    <ClInclude Include="ShadowAtlas.h" />
+    <ClInclude Include="ShadowCaster.h" />
     <ClInclude Include="SimpleSet.h" />
     <ClInclude Include="SpecializedShaderProgram.h" />
     <ClInclude Include="SphereCollider.h" />
