--- a/IonEngine_Test/imgui.ini
+++ b/IonEngine_Test/imgui.ini
@@ -19,12 +19,12 @@ Size=460,450
 Collapsed=0
 
 [Window][Camera]
-Pos=24,480
+Pos=334,634
 Size=287,160
 Collapsed=0
 
 [Window][Cube]
-Pos=24,500
+Pos=312,614
 Size=285,356
 Collapsed=0
 
@@ -81,5 +81,10 @@ Collapsed=0
 [Window][GroundWall]
 Pos=800,52
 Size=266,174
+Collapsed=0
+
+[Window][Light]
+Pos=24,500
+Size=287,335
 Collapsed=0
 
